Fixed alignment on bottom arrow

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -13,8 +13,8 @@
   background-image: linear-gradient(90deg, #433b30, #fbf7e8);
 }
 
-.bio_and_me_col{
-  padding-top: 160px;
+.bio_and_me_col {
+  padding-top: 40px;
   align-items: center;
   justify-content: space-between;
   gap: 150px;
@@ -23,6 +23,9 @@
 .downArrow {
   display: flex;
   justify-content: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
 .me_col {
